# cpp-arithmetic

./: CMakeLists.txt  README.txt
app/: delaunay_triangulation.cpp  ex1.off  ex2.off  ex3.off  test_interval.cpp  test_kernel.cpp  triangulation_2_demo.cpp
cktmp/: assignment_id  commit_history  commit_id  submission_source
cktmp/distribution/: IDENTIFICATION.txt
cktmp/distribution/app/: triangulation_2.hpp
cktmp/distribution/include/ra/: interval.hpp  kernel.hpp
cktmp/package-deltri_orig/build-delaunay_triangulation/: log
cktmp/package-deltri_orig/configure/: log
cktmp/package-deltri_orig/derived/: CMakeCache.txt  Makefile  cmake_install.cmake  delaunay_triangulation
cktmp/package-deltri_orig/source/app/: delaunay_triangulation.cpp  test_kernel.cpp  triangulation_2.hpp
cktmp/package-interval_orig/build-test_interval/: log
cktmp/package-interval_orig/build-test_kernel/: log
cktmp/package-interval_orig/configure/: log
cktmp/package-interval_orig/derived/: CMakeCache.txt  Makefile  cmake_install.cmake  test_interval  test_kernel
cktmp/package-interval_orig/source/app/: test_interval.cpp
cktmp/package-interval_orig/source/include/ra/: interval.hpp  kernel.hpp
cktmp/package-interval_sane/build-test_interval/: log
cktmp/package-interval_sane/build-test_kernel/: log
cktmp/package-interval_sane/configure/: log
cktmp/package-interval_sane/derived/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
include/ra/: interval.hpp  kernel.hpp
